--- a/sectionVolatility.ipynb
+++ b/sectionVolatility.ipynb
@@ -9,7 +9,8 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, functions as f\n",
-    "from pyspark.sql.window import Window"
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.types import DoubleType"
    ]
   },
   {
@@ -21,32 +22,15 @@
     "spark = SparkSession.builder.master('local[*]').appName('HTF_Vol').getOrCreate()\n",
     "spark.conf.set(\"spark.executor.memory\", \"2g\")\n",
     "\n",
-    "\n",
-    "\n",
-    "df = spark.read.csv('newaa.csv', header=True)\n",
-    "df = df.withColumn('TIME', f.date_format(df.TIME, 'HH:mm:ss'))"
+    "df = spark.read.csv('new2MM.csv', header=True)\n",
+    "df = df.withColumn('TIME', f.date_format(df.TIME, 'HH:mm:ss'))\n",
+    "df = df.withColumn('PRICE', df['PRICE'].cast(DoubleType()))\n",
+    "df = df.withColumn('SIZE', df['SIZE'].cast(DoubleType()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+--------+--------+-----+-----+\n|SYMBOL|    DATE|    TIME|PRICE| SIZE|\n+------+--------+--------+-----+-----+\n|     A|20021202|09:30:20|19.75|30200|\n|     A|20021202|09:30:22|19.75|  100|\n|     A|20021202|09:30:22|19.75|  300|\n|     A|20021202|09:30:22|19.75|  100|\n|     A|20021202|09:30:23|19.75|  100|\n|     A|20021202|09:30:23|19.75|  100|\n|     A|20021202|09:30:23|19.75|  100|\n|     A|20021202|09:30:23|19.75|  100|\n|     A|20021202|09:30:23|19.75|  100|\n|     A|20021202|09:30:23|19.75|  100|\n|     A|20021202|09:30:23|19.75| 1100|\n|     A|20021202|09:30:23|19.75| 1000|\n|     A|20021202|09:30:23|19.75|  400|\n|     A|20021202|09:30:23|19.75|  100|\n|     A|20021202|09:30:23|19.75|  100|\n|     A|20021202|09:30:23|19.75|  200|\n|     A|20021202|09:30:23|19.75|  100|\n|     A|20021202|09:30:23|19.75| 1000|\n|     A|20021202|09:30:23|19.75| 3000|\n|     A|20021202|09:30:23|19.75|  100|\n+------+--------+--------+-----+-----+\nonly showing top 20 rows\n\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +41,7 @@
     "df = df.withColumn('PRICE_1', f.lead('PRICE').over(w))\n",
     "df = df.withColumn('LOG_RETURN', f.log(df.PRICE_1/df.PRICE))\n",
     "\n",
+    "\n",
     "# patition a window to calculate the moving standard deviation\n",
     "window_period = 100\n",
     "w2 = Window().partitionBy('SYMBOL', 'DATE').orderBy('TIME').rowsBetween(0, window_period)\n",
@@ -65,43 +50,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+--------+--------+-----+------+-------+--------------------+--------------------+\n|SYMBOL|    DATE|    TIME|PRICE|  SIZE|PRICE_1|          LOG_RETURN|          VOLATILITY|\n+------+--------+--------+-----+------+-------+--------------------+--------------------+\n|     A|20030313|09:31:56|12.85| 100.0|  12.85|                 0.0|0.001200364347379...|\n|     A|20030313|09:31:56|12.85| 100.0|  12.85|                 0.0|0.001241718939716...|\n|     A|20030313|09:32:53| 12.9| 500.0|   12.9|                 0.0|0.001251768962410...|\n|     A|20030313|09:33:42| 12.9|1600.0|  12.93|0.002322881416139...|0.001198128050389...|\n|     A|20030313|09:34:23|12.86| 600.0|  12.89|0.002330098141622...|9.932908648948929E-4|\n|     A|20030313|09:34:31|12.89| 300.0|  12.88|-7.76096274888403...|9.655208706825252E-4|\n|     A|20030313|09:36:18|12.83| 400.0|   12.8|-0.00234100770197...|8.759937301650406E-4|\n|     A|20030313|09:37:50|12.82|3400.0|   12.8|-0.00156128056695...|8.158317566504872E-4|\n|     A|20030313|09:38:18| 12.8| 300.0|   12.8|                 0.0|8.101120038332188E-4|\n|     A|20030313|09:39:36| 12.8|1500.0|  12.81| 7.80944983071351E-4|8.101120038332191E-4|\n|     A|20030313|09:39:43|12.81| 500.0|  12.81|                 0.0|8.237454912010959E-4|\n|     A|20030313|09:41:18|12.81| 100.0|  12.81|                 0.0|8.464630093426404E-4|\n|     A|20030313|09:41:21|12.81| 200.0|  12.81|                 0.0|8.509472198765502E-4|\n|     A|20030313|09:41:45| 12.8| 300.0|   12.8|                 0.0|8.510027953749628E-4|\n|     A|20030313|09:42:30|12.81| 600.0|  12.81|                 0.0|8.656813972964137E-4|\n|     A|20030313|09:43:32| 12.8| 100.0|  12.82|0.001561280566952...|8.661264944078238E-4|\n|     A|20030313|09:43:55| 12.8| 900.0|  12.81| 7.80944983071351E-4| 8.40374314316861E-4|\n|     A|20030313|09:45:14|12.79| 500.0|  12.78|-7.82166641362505E-4|7.927910872402954E-4|\n|     A|20030313|09:46:14|12.75| 400.0|  12.75|                 0.0|7.447124859266051E-4|\n|     A|20030313|09:46:16|12.75| 200.0|  12.75|                 0.0|7.566700392401487E-4|\n+------+--------+--------+-----+------+-------+--------------------+--------------------+\nonly showing top 20 rows\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_A = df.where(df['SYMBOL'] == 'A').select('*').sample(False, 0.2)\n",
-    "df_A.toPandas"
+    "seconds = 300\n",
+    "timeFormat = 'HH:mm:ss'\n",
+    "seconds_window = f.from_unixtime(f.unix_timestamp('TIME', format='HH:mm:ss') - \n",
+    "                  f.unix_timestamp('TIME', format='HH:mm:ss') % seconds, format='HH:mm:ss')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = df.sampleBy('SYMBOL', fractions={'A': 0.005, 'AA': 0.005, 'AAP':0.005, 'AAI': 0.005})"
+    "df = df.withColumn('5_min_window', seconds_window)\n",
+    "\n",
+    "#df_AA = df.where(df['SYMBOL'] == 'A').select('*')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pd = test.toPandas()"
+    "new_df = df.groupby('SYMBOL', 'DATE', '5_min_window').agg(\n",
+    "    f.avg('VOLATILITY').alias('avgVol'),\n",
+    "    f.avg('PRICE').alias('avgPrice'),\n",
+    "    f.avg('SIZE').alias('avgSize'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#new_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w3 = Window().partitionBy('SYMBOL', 'DATE').orderBy('5_min_window')\n",
+    "w4 = Window().partitionBy('SYMBOL').orderBy('DATE', '5_min_window')\n",
+    "\n",
+    "# calculate the u_sequence\n",
+    "new_df = new_df.withColumn('PRICE_1', f.lead('avgPrice').over(w4))\n",
+    "new_df = new_df.withColumn('U_SEQ', f.log(new_df.PRICE_1/new_df.avgPrice))\n",
+    "new_df = new_df.withColumn('Num', f.lit(1))\n",
+    "new_df = new_df.withColumn('totalSum', f.sum('Num').over(w4))\n",
+    "new_df = new_df.withColumn('sumSqaures', f.sum(f.pow(new_df.U_SEQ, 2)).over(w4)/(new_df.totalSum - f.lit(1)))\n",
+    "new_df = new_df.withColumn('suqareSums', f.pow(f.sum(new_df.U_SEQ).over(w4), 2)/((new_df.totalSum - f.lit(1)) \n",
+    "                                                                                * new_df.totalSum))\n",
+    "new_df = new_df.withColumn('sectionVol', f.sqrt(new_df.sumSqaures - new_df.suqareSums))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#section_volatility = f.sqrt(f.sum(f.pow(new_df.U_SEQ, 2)).over(w3)/(new_df.totalSum - f.lit(1)) \n",
+    "#                            - f.pow(f.sum(new_df.U_SEQ).over(w3), 2)/((new_df.totalSum - f.lit(1) * new_df.totalSum)))\n",
+    "\n",
+    "\n",
+    "#new_df = new_df.withColumn('sectionVol', section_volatility)\n",
+    "#df = df.withColumn('cumSum', f.sum('PRICE').over(w))\n",
+    "\n",
+    "#df = df.withColumn('count', f.lit(1))\n",
+    "#df = df.withColumn('totalNum', f.sum('count').over(w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_pd = new_df\\\n",
+    "    .select('SYMBOL', 'DATE', '5_min_window', 'avgVol', 'avgPrice', 'avgSize','PRICE_1', 'U_SEQ', 'totalSum',\n",
+    "            'sectionVol')\\\n",
+    "    .toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -114,69 +163,81 @@
        "      <th></th>\n",
        "      <th>SYMBOL</th>\n",
        "      <th>DATE</th>\n",
-       "      <th>TIME</th>\n",
-       "      <th>PRICE</th>\n",
-       "      <th>SIZE</th>\n",
+       "      <th>5_min_window</th>\n",
+       "      <th>avgVol</th>\n",
+       "      <th>avgPrice</th>\n",
+       "      <th>avgSize</th>\n",
        "      <th>PRICE_1</th>\n",
-       "      <th>LOG_RETURN</th>\n",
-       "      <th>VOLATILITY</th>\n",
+       "      <th>U_SEQ</th>\n",
+       "      <th>totalSum</th>\n",
+       "      <th>sectionVol</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030121</td>\n",
-       "      <td>10:25:04</td>\n",
-       "      <td>4.98</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>4.95</td>\n",
-       "      <td>-0.006042</td>\n",
-       "      <td>0.004705</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:30:00</td>\n",
+       "      <td>0.000426</td>\n",
+       "      <td>63.151250</td>\n",
+       "      <td>1150.000000</td>\n",
+       "      <td>63.147692</td>\n",
+       "      <td>-0.000056</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030321</td>\n",
-       "      <td>10:21:14</td>\n",
-       "      <td>6.22</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>6.22</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.001575</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:35:00</td>\n",
+       "      <td>0.000365</td>\n",
+       "      <td>63.147692</td>\n",
+       "      <td>584.615385</td>\n",
+       "      <td>62.923636</td>\n",
+       "      <td>-0.003554</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.002474</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030321</td>\n",
-       "      <td>11:40:36</td>\n",
-       "      <td>6.25</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>6.25</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.009540</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:40:00</td>\n",
+       "      <td>0.000339</td>\n",
+       "      <td>62.923636</td>\n",
+       "      <td>1150.000000</td>\n",
+       "      <td>62.854615</td>\n",
+       "      <td>-0.001098</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.001796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030321</td>\n",
-       "      <td>12:42:04</td>\n",
-       "      <td>6.55</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>6.55</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.002280</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:45:00</td>\n",
+       "      <td>0.000349</td>\n",
+       "      <td>62.854615</td>\n",
+       "      <td>369.230769</td>\n",
+       "      <td>62.668462</td>\n",
+       "      <td>-0.002966</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.001624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030321</td>\n",
-       "      <td>14:26:21</td>\n",
-       "      <td>6.49</td>\n",
-       "      <td>1500.0</td>\n",
-       "      <td>6.48</td>\n",
-       "      <td>-0.001542</td>\n",
-       "      <td>0.003299</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:50:00</td>\n",
+       "      <td>0.000343</td>\n",
+       "      <td>62.668462</td>\n",
+       "      <td>430.769231</td>\n",
+       "      <td>62.607600</td>\n",
+       "      <td>-0.000972</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.001469</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,87 +251,110 @@
        "      <th></th>\n",
        "      <th>SYMBOL</th>\n",
        "      <th>DATE</th>\n",
-       "      <th>TIME</th>\n",
-       "      <th>PRICE</th>\n",
-       "      <th>SIZE</th>\n",
+       "      <th>5_min_window</th>\n",
+       "      <th>avgVol</th>\n",
+       "      <th>avgPrice</th>\n",
+       "      <th>avgSize</th>\n",
        "      <th>PRICE_1</th>\n",
-       "      <th>LOG_RETURN</th>\n",
-       "      <th>VOLATILITY</th>\n",
+       "      <th>U_SEQ</th>\n",
+       "      <th>totalSum</th>\n",
+       "      <th>sectionVol</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030121</td>\n",
-       "      <td>10:25:04</td>\n",
-       "      <td>4.98</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>4.95</td>\n",
-       "      <td>-0.006042</td>\n",
-       "      <td>0.004705</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:30:00</td>\n",
+       "      <td>0.000426</td>\n",
+       "      <td>63.151250</td>\n",
+       "      <td>1150.000000</td>\n",
+       "      <td>63.147692</td>\n",
+       "      <td>-0.000056</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030321</td>\n",
-       "      <td>10:21:14</td>\n",
-       "      <td>6.22</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>6.22</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.001575</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:35:00</td>\n",
+       "      <td>0.000365</td>\n",
+       "      <td>63.147692</td>\n",
+       "      <td>584.615385</td>\n",
+       "      <td>62.923636</td>\n",
+       "      <td>-0.003554</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.002474</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030321</td>\n",
-       "      <td>11:40:36</td>\n",
-       "      <td>6.25</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>6.25</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.009540</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:40:00</td>\n",
+       "      <td>0.000339</td>\n",
+       "      <td>62.923636</td>\n",
+       "      <td>1150.000000</td>\n",
+       "      <td>62.854615</td>\n",
+       "      <td>-0.001098</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.001796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030321</td>\n",
-       "      <td>12:42:04</td>\n",
-       "      <td>6.55</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>6.55</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.002280</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:45:00</td>\n",
+       "      <td>0.000349</td>\n",
+       "      <td>62.854615</td>\n",
+       "      <td>369.230769</td>\n",
+       "      <td>62.668462</td>\n",
+       "      <td>-0.002966</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.001624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>AAI</td>\n",
-       "      <td>20030321</td>\n",
-       "      <td>14:26:21</td>\n",
-       "      <td>6.49</td>\n",
-       "      <td>1500.0</td>\n",
-       "      <td>6.48</td>\n",
-       "      <td>-0.001542</td>\n",
-       "      <td>0.003299</td>\n",
+       "      <td>ABK</td>\n",
+       "      <td>20021202</td>\n",
+       "      <td>09:50:00</td>\n",
+       "      <td>0.000343</td>\n",
+       "      <td>62.668462</td>\n",
+       "      <td>430.769231</td>\n",
+       "      <td>62.607600</td>\n",
+       "      <td>-0.000972</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.001469</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_pd.head()"
+    "data_pd.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sectionVolatility = {}\n",
+    "for symbol in set(data_pd.SYMBOL):\n",
+    "    sectionVolatility[symbol] = data_pd.loc[data_pd.SYMBOL == symbol, :].reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -284,51 +368,37 @@
    "source": [
     "%matplotlib\n",
     "from matplotlib import pyplot as plt\n",
-    "import pandas as pd\n",
+    "count = 1\n",
+    "fig, axes = plt.subplots(nrows=2, ncols=1, figsize=(15,10))\n",
     "\n",
-    "fig, axes = plt.subplots(nrows=4, ncols=1)\n",
-    "i = 1\n",
-    "for symbol in ['A', 'AA', 'AAI', 'AAP']:\n",
-    "    plt.subplot(4, 1, i)\n",
-    "    plt.plot(df_pd.loc[df_pd.SYMBOL == symbol,  'VOLATILITY'], label=symbol)\n",
-    "    i+=1\n",
-    "    #plt.ylim(0, 0.005)\n",
     "\n",
+    "for symbol in sectionVolatility:\n",
+    "    plt.subplot(2, 1, 1)\n",
+    "    plt.grid()\n",
+    "    plt.plot(sectionVolatility[symbol].loc[:,  'sectionVol'], label=symbol)\n",
     "    plt.legend(loc='upper right')\n",
+    "    plt.ylabel('Section Volatility')\n",
+    "    plt.subplot(2, 1, 2)\n",
+    "    plt.plot(sectionVolatility[symbol].loc[:,  'avgPrice'], label=symbol)\n",
+    "    plt.grid()\n",
+    "    plt.ylabel('Stock Price')\n",
+    "    #sectionVolatility[symbol].to_csv(symbol + '_SectionVol_0614.csv')\n",
+    "    count +=1\n",
+    "    if count > 5:\n",
+    "        break\n",
     "\n",
-    "plt.suptitle('Realized Volatility')\n",
-    "\n",
-    "fig.savefig('Realized_Vol.png')"
+    "plt.suptitle('Section Volatility')\n",
+    "#plt.ylabel('Section Volatility')\n",
+    "plt.savefig('Section_Vol0614.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.write.csv('result0527.csv')\n",
-    "\n",
-    "# df.toPandas().to_csv('newaa_result.csv')\n",
-    "# df.write.format('com.databricks.spark.csv').save('newaa_result.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ""
+    "data_pd.to_csv('section_volatility.csv')"
    ]
   },
   {
